# n8n-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  n8n-api.yaml
.dots/: config  n8n-cli-8d7a0ac4aaef60d1.md
.dots/archive/: n8n-cli-8d7a0ac4aaef60d1.md
.github/workflows/: release.yml
Formula/: n8n-cli.rb
schemas/: command_tree.json
scripts/: install.sh
src/: command_tree.rs  main.rs
tools/: gen_command_tree.rs
